--- a/views/about.html
+++ b/views/about.html
@@ -98,7 +98,7 @@
 <footer>
   <div id="bar">
     <ul id="progressbar">
-      <li class="" id="step1"><a href="/index.hml">Introduction</a> </li>
+      <li class="" id="step1"><a href="index.hml">Introduction</a> </li>
       <li class="" id="step2"><a href="analyzer.html"> Face analyzer</a></li>
       <li class="" id="step3"><a href="faces.html"> Mugshot database</a></li>
       <!--<li class="active current" id="step4"><a href="/data.html"> faq</a></li>-->
