--- a/views/analyzer.html
+++ b/views/analyzer.html
@@ -50,7 +50,7 @@
         <div class="content pt-4 pb-2">
          <p></p>
           <div class="row options not-visible pt-1">
-            <div class="col-6">
+            <div class="col-6 ">
               <button class="disagree cta">No</button>
             </div>
             <div class="col-6">
@@ -95,7 +95,7 @@
           <div class="row ">
 
             <!-- start column 1 -->
-            <div class="col-4">
+            <div class="col-sm-12 col-xxl-4 ">
 
               <fieldset class="box-border">
                 <legend class="box-border">>_Features</legend>
@@ -163,7 +163,7 @@
             <!-- end column 1 -->
 
             <!-- start column 2 -->
-            <div class="col-4">
+            <div class="col-sm-12 col-xxl-4">
               <section class="analyzer__section">
                 <!--<video id="gum-local" ></video>-->
                 <div id="my_camera">
@@ -180,7 +180,7 @@
             <!-- end column 2 -->
 
             <!-- start column 3 -->
-            <div class="col-4">
+            <div class="col-sm-12 col-xxl-4">
               <fieldset class="box-border">
                 <legend class="box-border">>_Crime profile</legend>
                 <div class="helper-box">
@@ -213,7 +213,7 @@ Datasource: Statistics Netherlands.<br><br><a href='https://opendata.cbs.nl/stat
                     <!--Met jou uiterlijke kenmerken behoor je tot een groep waarvan tussen 2014 en 2015 <span class="risk-percentage">46%</span> een <span class="crime-category">vermogensmisdrijf</span> heeft gepleegd.-->
                   </p>
                   <!--<div id="my_dataviz"></div>-->
-                  <canvas id="myChart" class="pb-3" width="100vw" height="100vw"></canvas>
+                  <canvas id="myChart" class="pb-3 col-sm-12" width="100vw" height="100vw"></canvas>
                   <button class="buttonOptions cta save-data disabled "  data-msg="Do we have permission to save your photo so it can be used in our application? If not, we will store your data only locally and it will only be visible to you.">Create mugshot and view data</button>
                 </div>
 
@@ -228,7 +228,7 @@ Datasource: Statistics Netherlands.<br><br><a href='https://opendata.cbs.nl/stat
         </div>
         <!-- End container -->
 
-        <div class="container utility">
+        <div class="container utility d-none d-lg-block">
           <div class="col-2">
             <table>
               <tr><td>Session</td><td>:</td><td><span class="session">UNI43535</span></td></tr>
@@ -299,7 +299,7 @@ Datasource: Statistics Netherlands.<br><br><a href='https://opendata.cbs.nl/stat
 <script async src="js/app.js"></script>
 <script src="js/cameraAvailablity.js"></script>
 
-<!--<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>-->
+<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <!--<script src="js/camera.js"></script>-->
 
 
