--- a/scss/globals/_header.scss
+++ b/scss/globals/_header.scss
@@ -51,7 +51,7 @@ nav .navigation li:first-child {
 
 
 nav .navigation li:hover{
-  border-bottom:.5px inset $green;
+  border-bottom:.2px inset $darkblue;
   position: relative;
 }
 
