added cta animation

--- a/views/analyzer.html
+++ b/views/analyzer.html
@@ -164,11 +164,14 @@
 
             <!-- start column 2 -->
             <div class="col-sm-12 col-xxl-4">
+
               <section class="analyzer__section">
+                <!--<img id="imageid" src="https://thispersondoesnotexist.com/image" width="100%">-->
                 <!--<video id="gum-local" ></video>-->
                 <div id="my_camera">
 
                 </div>
+
 
                 <div id="kairos_response" class="col-lg-6"
                      style="padding:10px;border:1px solid rgba(51, 51, 51, 0.08);background-color:
@@ -214,7 +217,7 @@ Datasource: Statistics Netherlands.<br><br><a href='https://opendata.cbs.nl/stat
                   </p>
                   <!--<div id="my_dataviz"></div>-->
                   <canvas id="myChart" class="pb-3 col-sm-12" width="100vw" height="100vw"></canvas>
-                  <button class="buttonOptions cta save-data disabled "  data-msg="Do we have permission to save your photo so it can be used in our application? If not, we will store your data only locally and it will only be visible to you.">Create mugshot and view data</button>
+                  <button class="buttonOptions cta save-data disabled "  data-msg="Do we have permission to save your photo so it can be used in our application? If not, we will store your data only locally and it will only be visible to you.">Create mugshot and explore data</button>
                 </div>
 
               </fieldset>
