--- a/css/styles.css
+++ b/css/styles.css
@@ -324,6 +324,17 @@ nav .navigation li:first-child {
     animation: glitch-test 4s infinite linear alternate;
     animation-delay: 1s; }
 
+.activeB {
+  animation: fade 2s infinite linear; }
+
+@keyframes fade {
+  0% {
+    opacity: 1; }
+  50% {
+    opacity: .2; }
+  100% {
+    opacity: 1; } }
+
 @font-face {
   font-family: 'Dejavu-Regular';
   src: url("../../fonts/DejaVu-Sans-Mono-for-Powerline.ttf"); }
