--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -462,4 +462,18 @@ nav .navigation li:first-child{
 
 
 
+.activeB{
+  animation: fade 2s infinite linear;
+}
 
+@keyframes fade{
+  0%{
+    opacity: 1;
+  }
+  50%{
+    opacity: .2;
+  }
+  100%{
+    opacity: 1;
+  }
+}
