added about and faq text

--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -1,2 +1,13 @@
 @import '../config/variables';
 @import '../config/media';
+
+.about h1{
+  font-family: IBM-Medium;
+}
+.about p{
+  font-family: IBM-Medium;
+}
+
+.about a{
+  color:$green;
+}
