--- a/views/about.html
+++ b/views/about.html
@@ -67,15 +67,20 @@
 
 
           <!-- start column 2 -->
-          <div class="col-12">
+          <div class="col-6">
             <!--<fieldset class="box-border">-->
             <!--<legend class="box-border">>_INTRODUCTION</legend>-->
             <div class="content">
               <h1>About</h1>
               <p>
+                Catch your crime profile is a experimental graduation project and it's build for experimental purpose only.
+                This application uses A.I. technology to analyze faces and connects them to historical dutch crime data
+                to give you feedback about how your facial features are represented within the crime data.<br><br>
+
+                Build by: Eyob Westerink<br><br>
+                View on git: <a href="https://github.com/EyobDejene/crimeprofile">Github repository</a>
 
               </p>
-
             </div>
             <!--</fieldset>-->
           </div>
