--- a/css/styles.css
+++ b/css/styles.css
@@ -957,8 +957,39 @@ select option {
 .faces .helper-box {
   padding-bottom: 1.5rem; }
 
+.about h1 {
+  font-family: IBM-Medium; }
+
+.about p {
+  font-family: IBM-Medium; }
+
+.about a {
+  color: #00FF29; }
+
 .faq .content h1 {
   font-family: IBM-Medium; }
 
 .faq .content p {
-  font-family: IBM-Medium; }
+  font-family: Dejavu-Regular;
+  font-size: 0.8rem; }
+
+.faq ul {
+  padding: 0 !important; }
+
+.faq ul li {
+  list-style: none;
+  padding: .5rem;
+  font-family: IBM-Medium;
+  font-weight: 500;
+  font-size: 0.9rem; }
+
+.faq li a {
+  color: #00FF29; }
+
+.faq li:hover {
+  cursor: pointer; }
+
+.faq li .info p {
+  font-size: 0.7rem !important;
+  color: #00FF29;
+  line-height: 20px; }
