--- a/scss/pages/_faq.scss
+++ b/scss/pages/_faq.scss
@@ -3,5 +3,31 @@
 }
 
 .faq .content p{
+  font-family: Dejavu-Regular;
+  font-size: 0.8rem;
+}
+
+.faq ul{
+  padding: 0!important;
+}
+
+.faq ul li{
+  list-style: none;
+  padding: .5rem;
   font-family: IBM-Medium;
+  font-weight: 500;
+  font-size: 0.9rem;
+}
+.faq li a{
+  color:$green;
+}
+
+.faq li:hover{
+  cursor: pointer;
+}
+
+.faq li .info p{
+  font-size: 0.7rem!important;
+  color: $green;
+  line-height: 20px;
 }
